--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "bootstrap": "^4.5.0",
+    "express": "^4.17.1",
+    "react-bootstrap": "^1.2.2",
+    "react-bootstrap-table-next": "^4.0.3"
   },
   "devDependencies": {
     "concurrently": "^4.0.1",
