--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "bootstrap": "^4.5.0",
     "express": "^4.17.1",
     "react-bootstrap": "^1.2.2",
-    "react-bootstrap-table-next": "^4.0.3"
+    "react-bootstrap-table-next": "^4.0.3",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "concurrently": "^4.0.1",
